--- a/source/GradBook/src/main/webapp/discipline/edit.xhtml
+++ b/source/GradBook/src/main/webapp/discipline/edit.xhtml
@@ -7,7 +7,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <f:metadata>
-	<f:viewParam name="id" value="#{disciplineBean.discipline}" />
+	<f:viewParam name="discipline" value="#{disciplineBean.discipline}" />
+	<f:viewParam name="course" value="#{semesterBean.course}" />	
 </f:metadata>
 
 <ui:composition template="/discipline/create.xhtml">
