--- a/source/GradBook/src/main/webapp/discipline/list.xhtml
+++ b/source/GradBook/src/main/webapp/discipline/list.xhtml
@@ -14,7 +14,7 @@
 			<p:button icon="ui-icon-plus" outcome="create"
 				value="#{msgs.create} #{msgs.discipline}" />
 			<p:dataTable id="table" var="discipline"
-				value="#{disciplineBean.disciplines}" paginator="true" rows="10"
+				value="#{disciplineBean.disciplinesEager}" paginator="true" rows="10"
 				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="5,10,20" resizableColumns="true" reflow="true"
 				paginatorPosition="bottom">
