--- a/source/GradBook/src/main/webapp/task/edit.xhtml
+++ b/source/GradBook/src/main/webapp/task/edit.xhtml
@@ -7,7 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <f:metadata>
-	<f:viewParam name="discipline" value="#{disciplineBean.discipline}" />
+	<f:viewParam name="team" value="#{teamBean.team}" />
 	<f:viewParam name="course" value="#{semesterBean.course}" />	
 </f:metadata>
 
