--- a/source/GradBook/src/main/webapp/function/list.xhtml
+++ b/source/GradBook/src/main/webapp/function/list.xhtml
@@ -24,7 +24,7 @@
 				</f:facet>
 
 				<p:column sortBy="#{function.name}"
-					headerText="#{msgs.name_pole}">
+					headerText="#{msgs.name_function}">
 					<h:outputText value="#{function.name}" />
 				</p:column>
 
