--- a/source/GradBook/src/main/webapp/admin/semester/list.xhtml
+++ b/source/GradBook/src/main/webapp/admin/semester/list.xhtml
@@ -5,43 +5,43 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="/WEB-INF/templates/default.xhtml">
+<ui:composition template="/WEB-INF/templates/admin.xhtml">
 
-	<ui:define name="titlePage"> #{msgs.collaborator}</ui:define>
+	<ui:define name="titlePage"> #{msgs.semester}</ui:define>
 	<ui:define name="bodyPage">
 
 		<h:form id="formTable">
 			<p:button icon="ui-icon-plus" outcome="create"
-				value="#{msgs.create} #{msgs.collaborator}" />
-			<p:dataTable id="table" var="collaborator"
-				value="#{collaboratorBean.collaborators}" paginator="true" rows="10"
+				value="#{msgs.create} #{msgs.semester}" />
+			<p:dataTable id="table" var="semester"
+				value="#{semesterBean.semestersEager}" paginator="true" rows="10"
 				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="5,10,20" resizableColumns="true" reflow="true"
 				paginatorPosition="bottom">
 
 				<f:facet name="header">
-					<h:outputText value="#{msgs.list_collaborator}" />
+					<h:outputText value="#{msgs.semesters}" />
 				</f:facet>
 
-				<p:column sortBy="#{collaborator.name}"
-					headerText="#{msgs.name_collaborator}">
-					<h:outputText value="#{collaborator.name}" />
+				<p:column sortBy="#{semester.name}"
+					headerText="#{msgs.name_semester}">
+					<h:outputText value="#{semester.name}" />
 				</p:column>
 				
-				<p:column sortBy="#{collaborator.cpf}"
-					headerText="#{msgs.cpf_collaborator}">
-					<h:outputText value="#{collaborator.cpf}" />
+				<p:column sortBy="#{semester.course.name}"
+					headerText="#{msgs.course}">
+					<h:outputText value="#{semester.course.name}" />
 				</p:column>
 
 				<p:column headerText="#{msgs.edit}">
 					<p:button value="#{msgs.edit}" icon="fa fa-fw fa-edit"
 						outcome="edit">
-						<f:param name="id" value="#{collaborator.id}" />
+						<f:param name="id" value="#{semester.id}" />
 					</p:button>
 				</p:column>
 				<p:column headerText="#{msgs.delete}">
 					<p:commandButton value="#{msgs.delete}" icon="fa fa-fw fa-remove"
-						actionListener="#{collaboratorBean.delete(collaborator)}" update="table">
+						actionListener="#{semesterBean.delete(semester)}" update="table">
 						<p:confirm header="#{msgs.alert}"
 							message="#{msgs.confirm_delete}"
 							icon="ui-icon-alert" />
