--- a/source/GradBook/src/main/webapp/admin/function/list.xhtml
+++ b/source/GradBook/src/main/webapp/admin/function/list.xhtml
@@ -5,42 +5,38 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="/WEB-INF/templates/default.xhtml">
+<ui:composition template="/WEB-INF/templates/admin.xhtml">
 
-	<ui:define name="titlePage"> #{msgs.course}</ui:define>
+	<ui:define name="titlePage"> #{msgs.function}</ui:define>
 	<ui:define name="bodyPage">
 
 		<h:form id="formTable">
 			<p:button icon="ui-icon-plus" outcome="create"
-				value="#{msgs.create} #{msgs.course}" />
-			<p:dataTable id="table" var="course"
-				value="#{courseBean.courses}" paginator="true" rows="10"
+				value="#{msgs.create} #{msgs.function}" />
+			<p:dataTable id="table" var="function"
+				value="#{functionBean.functions}" paginator="true" rows="10"
 				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="5,10,20" resizableColumns="true" reflow="true"
 				paginatorPosition="bottom">
 
 				<f:facet name="header">
-					<h:outputText value="#{msgs.list_course}" />
+					<h:outputText value="#{msgs.list_function}" />
 				</f:facet>
 
-				<p:column sortBy="#{course.abbreviation}"
-					headerText="#{msgs.abbreviation_course}">
-					<h:outputText value="#{course.abbreviation}" />
-				</p:column>
-
-				<p:column sortBy="#{course.name}" headerText="#{msgs.name_course}">
-					<h:outputText value="#{course.name}" />
+				<p:column sortBy="#{function.name}"
+					headerText="#{msgs.name_function}">
+					<h:outputText value="#{function.name}" />
 				</p:column>
 
 				<p:column headerText="#{msgs.edit}">
 					<p:button value="#{msgs.edit}" icon="fa fa-fw fa-edit"
 						outcome="edit">
-						<f:param name="id" value="#{course.id}" />
+						<f:param name="id" value="#{function.id}" />
 					</p:button>
 				</p:column>
 				<p:column headerText="#{msgs.delete}">
 					<p:commandButton value="#{msgs.delete}" icon="fa fa-fw fa-remove"
-						actionListener="#{courseBean.delete(course)}" update="table">
+						actionListener="#{functionBean.delete(function)}" update="table">
 						<p:confirm header="#{msgs.alert}"
 							message="#{msgs.confirm_delete}"
 							icon="ui-icon-alert" />
