Adjuste in the configuration of server

--- a/source/GradBook/src/main/webapp/user/index.xhtml
+++ b/source/GradBook/src/main/webapp/user/index.xhtml
@@ -10,7 +10,7 @@
 
 	<ui:define name="titlePage"> GradBook</ui:define>
 	<ui:define name="bodyPage">
-		<h2>Só sucesso!</h2>
+		<h2>Só sucesso no User!</h2>
 	</ui:define>
 </ui:composition>
 </html>
