--- a/source/GradBook/src/main/webapp/admin/pole/edit.xhtml
+++ b/source/GradBook/src/main/webapp/admin/pole/edit.xhtml
@@ -10,7 +10,7 @@
 	<f:viewParam name="id" value="#{poleBean.pole}" />
 </f:metadata>
 
-<ui:composition template="/pole/create.xhtml">
+<ui:composition template="create.xhtml">
 	<ui:define name="comands">
 		<p:commandButton value="#{msgs.save}" icon="fa fa-fw fa-save"
 			action="#{poleBean.update()}" update="formRegister" />
