--- a/source/GradBook/src/main/webapp/admin/task/edit.xhtml
+++ b/source/GradBook/src/main/webapp/admin/task/edit.xhtml
@@ -11,7 +11,7 @@
 	<f:viewParam name="course" value="#{semesterBean.course}" />	
 </f:metadata>
 
-<ui:composition template="/task/create.xhtml">
+<ui:composition template="create.xhtml">
 	<ui:define name="comands">
 		<p:commandButton value="#{msgs.save}" icon="fa fa-fw fa-save"
 			action="#{taskBean.update()}" update="formRegister" />
